Propose Duckduckgo addon
Not exactly sure if this will work

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
   "content_scripts": [
     {
       "matches": ["https://*/search*"],
-      "include_globs": ["*.google.*/*"],
+      "include_globs": ["*.google.*/*", "*.duckduckgo.*/*"],
       "js": ["content-script.js"],
       "css": ["styles.css"]
     }
