--- a/package.json
+++ b/package.json
@@ -9,16 +9,10 @@
     "esbuild": "^0.15.17",
     "eventsource-parser": "^0.0.5",
     "expiry-map": "^2.0.0",
-    "uuid": "^9.0.0",
     "markdown-it": "^13.0.1",
-    "markdown-it-code-copy": "^0.1.1",
-    "markdown-it-prism": "^2.3.0",
-    "punycode": "^2.1.1"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "webextension-polyfill": "^0.10.0"
-  },
-  "scripts": {
-    "build": "sh build.sh"
-}
+  }
 }
