--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint --ext .js,.mjs .",
     "lint:fix": "eslint --ext .js,.mjs . --fix"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
     "archiver": "^5.3.1",
     "esbuild": "^0.15.17",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "eslint": "^8.29.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^2.8.0",
     "webextension-polyfill": "^0.10.0"
   }
