--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@picocss/pico": "^1.5.6",
     "@primer/octicons-react": "^17.9.0",
+    "esbuild-sass-plugin": "^2.4.3",
     "eventsource-parser": "^0.0.5",
     "expiry-map": "^2.0.0",
     "github-markdown-css": "^5.1.0",
