--- a/src/manifest.v2.json
+++ b/src/manifest.v2.json
@@ -226,7 +226,8 @@
         "https://*.yandex.uz/search*",
         "https://*.yandex.kz/search*",
         "https://*.yandex.by/search*",
-        "https://searx.be/search*"
+        "https://searx.be/search*",
+        "*://*.youtube.com/*"
       ],
       "js": ["content-script.js"],
       "css": ["content-script.css"]
