--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint --ext .js,.mjs,.jsx .",
     "lint:fix": "eslint --ext .js,.mjs,.jsx . --fix",
     "prepare": "husky install",
-    "watch": "chokidar src -c 'npm run build'"
+    "watch": "chokidar src -c 'npm run build'",
+    "verify": "tsx --no-cache .github/workflows/scripts/verify-search-engine-configs.ts"
   },
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
+    "@types/jsdom": "^20.0.1",
     "@types/lodash-es": "^4.17.6",
     "@types/uuid": "^9.0.0",
     "@types/webextension-polyfill": "^0.9.2",
@@ -44,13 +46,16 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "fs-extra": "^11.1.0",
     "husky": "^8.0.0",
+    "jsdom": "^21.0.0",
     "lint-staged": "^13.1.0",
+    "node-fetch": "^3.3.0",
     "postcss": "^8.4.20",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.0",
     "prettier-plugin-organize-imports": "^3.2.1",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
+    "tsx": "^3.12.2",
     "typescript": "^4.9.4",
     "webextension-polyfill": "^0.10.0"
   },
